<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="nUnderPressureTestErrorCodes" Id="{839be7ad-47d7-4b5b-be1c-cff2c2d26016}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE nUnderPressureTestErrorCodes :
(
	TestTimeOut := 860,
	SafetyError := 861
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>