<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="stUnderPressureTestParams" Id="{7652bad2-e123-4e0d-8403-3cf5fdcc5bec}">
    <Declaration><![CDATA[TYPE stUnderPressureTestParams :
STRUCT
	i_nVaccumLevel			: REAL 	:= 13000;
	i_tTestRelaxTime		: TIME	:= T#1S;
	i_tTestTime				: TIME	:= T#1S;
	stVacuumData			: stMeasurementScalingData;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>