<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="stUnderPressureTester" Id="{6e75b519-6776-419a-8341-8de257c1b696}">
    <Declaration><![CDATA[TYPE stUnderPressureTester :
STRUCT
	i_aEK1818InputBit		AT%I* 	: ARRAY[0..7] OF BOOL;	//Bity wej modulu EK1818
	i_aEL3702ChValue		AT%I* 	: ARRAY[0..1] OF INT;	//Warotsci z wejsc analogowych
	o_aEK1818OutputBit		AT%Q*	: ARRAY[0..3] OF BOOL;	//Bity wyjsciowe modulu EK1818
	o_aEL2008OutputBit		AT%Q*	: ARRAY[0..7] OF BOOL;	//Bity wyjsciowe modulu EL2008
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>